--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,13 +1,35 @@
-<div *ngIf="(recipes$ | async) as recipes" fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="2%" fxLayoutAlign="center">
-  <mat-card *ngFor="let recipe of recipes" class="recipe-card" fxFlex="25%" [matBadge]="recipe.likes.length">
-    <img mat-card-image [src]="recipe.imageUrl" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <mat-card-title>{{ recipe.name }}</mat-card-title>
-      <mat-card-subtitle>{{ recipe.createdAt.toDate() | date: 'shortDate' }}</mat-card-subtitle>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button (click)="toggleLike(recipe)">Like</button>
-      <button mat-button>OPEN</button>
-    </mat-card-actions>
+<div
+  *ngIf="(recipes$ | async) as recipes"
+  fxLayout="row"
+  fxLayout.xs="column"
+  fxLayoutWrap
+  fxLayoutGap="2%"
+  fxLayoutGap.xs="0"
+  fxLayoutAlign="center center"
+>
+  <mat-card
+    *ngFor="let recipe of recipes"
+    class="recipe-card"
+    fxFlex="30%"
+    [matBadge]="recipe.likes.length"
+  >
+    <img mat-card-image [src]="recipe.imageUrl" height="200" />
+    <div fxLayout="row">
+      <div>
+        <mat-card-title>{{ recipe.name }}</mat-card-title>
+        <mat-card-subtitle>{{
+          recipe.createdAt.toDate() | date: "shortDate"
+        }}</mat-card-subtitle>
+      </div>
+      <div class="fill-gap"></div>
+      <button
+        mat-icon-button
+        (click)="toggleLike(recipe)"
+        *ngIf="isAuthenticated"
+        color="accent"
+      >
+        <mat-icon>favorite</mat-icon>
+      </button>
+    </div>
   </mat-card>
 </div>
