--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,3 +1,13 @@
+<mat-toolbar class="search-container">
+  <input
+    type="text"
+    placeholder="Find your favorite recipe"
+    [(ngModel)]="searchInput"
+  />
+  <button mat-flat-button (click)="search()" color="accent">
+    <mat-icon>search</mat-icon>
+  </button>
+</mat-toolbar>
 <div
   *ngIf="(recipes$ | async) as recipes"
   fxLayout="row"
