--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -6,3 +6,15 @@
 .fill-gap {
   flex: 1 1 auto;
 }
+
+.search-container {
+  padding: 6px;
+
+  input[type="text"] {
+    padding: 6px;
+    font-size: 22px;
+    border: none;
+    width: 100%;
+    margin-right: 6px;
+  }
+}
