--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,14 @@
 <mat-sidenav-container>
-  <mat-sidenav #sidenav role="navigation">
+  <mat-sidenav #sidenav [opened]="openedSidenav" [mode]="sidenavMode">
+    <mat-toolbar>
+      <img
+        *ngIf="isAuthenticated()"
+        [src]="userProfileImage"
+        class="user-avatar"
+      />
+      <span></span>
+      <div *ngIf="isAuthenticated()">{{ username }}</div>
+    </mat-toolbar>
     <mat-nav-list>
       <a mat-list-item *ngIf="!isAuthenticated()" (click)="login()">
         <mat-icon class="icon">input</mat-icon>
@@ -11,7 +20,7 @@
       </a>
       <a mat-list-item *ngIf="isAuthenticated()" routerLink="/dashboard">
         <mat-icon class="icon">dashboard</mat-icon>
-        <span class="label">Dashboard</span>
+        <span class="label">Recipes</span>
       </a>
       <a
         mat-list-item
@@ -24,74 +33,31 @@
       </a>
     </mat-nav-list>
   </mat-sidenav>
-  <mat-sidenav-content fxFlexFill fxLayout="column">
+  <mat-sidenav-content>
     <div>
       <mat-toolbar color="primary">
-        <div fxHide.gt-xs>
-          <button mat-icon-button (click)="sidenav.toggle()">
-            <mat-icon>menu</mat-icon>
-          </button>
-        </div>
-        <div>
-          <a routerLink="/">
-            <mat-icon class="icon">room_service</mat-icon>
-            My Recipes
-          </a>
-        </div>
-        <div
-          fxFlex
-          fxLayout
-          fxLayoutAlign="flex-end"
-          *ngIf="username"
-          fxHide.gt-xs
-        >
-          <div>
-            <mat-icon class="icon">perm_identity</mat-icon
-            ><span class="label">{{ username }}</span>
-          </div>
-        </div>
-        <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
-          <ul fxLayout fxLayoutGap="20px" class="navigation-items">
-            <li>
-              <a *ngIf="!isAuthenticated()" (click)="login()">
-                <mat-icon class="icon">input</mat-icon>
-                <span class="label">Login</span>
-              </a>
-            </li>
-            <li>
-              <a *ngIf="isAuthenticated()" routerLink="/">
-                <mat-icon class="icon">home</mat-icon>
-                <span class="label">Home</span>
-              </a>
-            </li>
-            <li>
-              <a
-                *ngIf="isAuthenticated() && hasScopes(['read:recipes'])"
-                routerLink="/dashboard"
-              >
-                <mat-icon class="icon">dashboard</mat-icon>
-                <span class="label">Recipes</span>
-              </a>
-            </li>
-            <li>
-              <a *ngIf="isAuthenticated()" (click)="logout()" type="button">
-                <mat-icon class="icon">input</mat-icon>
-                <span class="label">Logout</span>
-              </a>
-            </li>
-            <li *ngIf="username"><mat-divider></mat-divider></li>
-            <li *ngIf="username">
-              <span>
-                <mat-icon class="icon">perm_identity</mat-icon
-                ><span class="label">{{ username }}</span>
-              </span>
-            </li>
-          </ul>
-        </div>
+        <button fxHide.gt-xs mat-icon-button (click)="sidenav.toggle()">
+          <mat-icon>menu</mat-icon>
+        </button>
+        <span class="fill-gap"></span>
+        <span> <mat-icon svgIcon="cooking"></mat-icon> </span>
+        <span class="app-name">My Recipes</span>
       </mat-toolbar>
     </div>
-    <div fxFlex="1 1 100%">
-      <main fxFlex="1 1 100%"><router-outlet></router-outlet></main>
+    <div class="components-container">
+      <main><router-outlet></router-outlet></main>
+    </div>
+    <div class="icon-credits">
+      Icons made by
+      <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from
+      <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+      is licensed by
+      <a
+        href="http://creativecommons.org/licenses/by/3.0/"
+        title="Creative Commons BY 3.0"
+        target="_blank"
+        >CC 3.0 BY</a
+      >
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
