--- a/src/app/components/recipe/recipe.component.html
+++ b/src/app/components/recipe/recipe.component.html
@@ -1,17 +1,20 @@
 <div class="recipe-container" *ngIf="(recipe$ | async) as recipe">
   <mat-card>
-    <mat-card-title>{{ recipe.name }}</mat-card-title>
+    <mat-card-title>
+      <span><mat-icon [svgIcon]="recipe.type"></mat-icon></span>
+      <span>{{ recipe.name }}</span>
+    </mat-card-title>
     <mat-card-subtitle>
       Shared at {{ recipe.createdAt.toDate() | date: "shortDate" }} by
       {{ recipe.ownerName }}
     </mat-card-subtitle>
     <img mat-card-image [src]="recipe.imageUrl" />
     <mat-card-content>
-      <h3>ingredients</h3>
+      <h2><mat-icon svgIcon="recipe"></mat-icon> ingredients</h2>
       <ul>
         <li *ngFor="let ingredient of recipe.ingredients">{{ ingredient }}</li>
       </ul>
-      <h3>Preparation Steps</h3>
+      <h2><mat-icon svgIcon="hot_pot"></mat-icon> Preparation Steps</h2>
       <ul>
         <li *ngFor="let preparationStep of recipe.preparationSteps">
           {{ preparationStep }}
