--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,59 @@
-It works!
+<div fxFlexFill fxLayout="column" class="content">
+  <div>
+    <mat-toolbar>
+      <span>Recipes</span> <span class="fill-remaining-space"></span>
+      <button
+        mat-icon-button
+        (click)="openNewRecipeDialog()"
+        matTooltip="New Recipe"
+        *ngIf="hasPermissions"
+      >
+        <mat-icon>add</mat-icon>
+      </button>
+    </mat-toolbar>
+  </div>
+  <div fxFlex="1 1 100%">
+    <mat-table fxFlex="1 1 100%" #table [dataSource]="dataSource">
+      <ng-container matColumnDef="name">
+        <mat-header-cell *matHeaderCellDef> Nome </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{ element.name }} </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="update">
+        <mat-header-cell *matHeaderCellDef></mat-header-cell>
+        <mat-cell *matCellDef="let element">
+          <button
+            mat-icon-button
+            (click)="openUpdateRecipeDialog(element)"
+            matTooltip="Update Recipe"
+            *ngIf="hasPermissions"
+          >
+            <mat-icon>update</mat-icon>
+          </button>
+        </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="delete">
+        <mat-header-cell *matHeaderCellDef></mat-header-cell>
+        <mat-cell *matCellDef="let element">
+          <button
+            mat-icon-button
+            (click)="deleteRecipe(element._id)"
+            matTooltip="Remove Recipe"
+            *ngIf="hasPermissions"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
+        </mat-cell>
+      </ng-container>
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+    </mat-table>
+  </div>
+  <div>
+    <mat-paginator
+      [length]="dataSource.totalSize"
+      [pageSize]="10"
+      [pageSizeOptions]="[10, 20, 50]"
+      showFirstLastButtons
+    ></mat-paginator>
+  </div>
+</div>
