--- a/src/app/components/recipe-dialog/recipe-dialog.component.scss
+++ b/src/app/components/recipe-dialog/recipe-dialog.component.scss
@@ -1,8 +1,8 @@
-.shop-form {
-    display: flex;
-    flex-direction: column;
+.recipe-form {
+  display: flex;
+  flex-direction: column;
 }
 
-.shop-form > * {
-    width: 100%;
+.recipe-form > * {
+  width: 100%;
 }
