--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -10,14 +10,18 @@
 </mat-toolbar>
 <div
   *ngIf="(recipes$ | async) as recipes"
-  fxLayout="row"
-  fxLayout.xs="column"
-  fxLayoutWrap
-  fxLayoutGap="2%"
-  fxLayoutGap.xs="0"
-  fxLayoutAlign="center center"
+  fxLayout="row wrap"
+  fxLayout.lt-sm="column"
+  fxLayoutGap="10px"
+  fxLayoutAlign="flex-start"
+  class="recipes-container"
 >
-  <mat-card *ngFor="let recipe of recipes" class="recipe-card" fxFlex="30%">
+  <mat-card
+    *ngFor="let recipe of recipes"
+    fxFlex="0 1 calc(33.3% - 10px)"
+    fxFlex.lt-md="0 1 calc(50% - 10px)"
+    class="recipe-card"
+  >
     <mat-card-title>
       <span><mat-icon [svgIcon]="recipe.type"></mat-icon></span>
       <span class="recipe-name">{{ recipe.name }}</span>
