Removing height limit.

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -26,7 +26,7 @@
       <span><mat-icon [svgIcon]="recipe.type"></mat-icon></span>
       <span class="recipe-name">{{ recipe.name }}</span>
     </mat-card-title>
-    <img mat-card-image [src]="recipe.imageUrl" height="200" />
+    <img mat-card-image [src]="recipe.imageUrl" />
     <mat-card-actions>
       <button
         mat-button
