--- a/src/app/components/recipe/recipe.component.html
+++ b/src/app/components/recipe/recipe.component.html
@@ -1,4 +1,9 @@
-<div class="recipe-container" *ngIf="(recipe$ | async) as recipe">
+<div
+  fxFlexFill
+  fxLayout="column"
+  class="recipe-container"
+  *ngIf="(recipe$ | async) as recipe"
+>
   <mat-card>
     <mat-card-title>
       <span><mat-icon [svgIcon]="recipe.type"></mat-icon></span>
