--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,15 +4,6 @@ mat-sidenav {
   height: 100%;
 }
 
-mat-sidenav-content {
-  display: flex;
-  flex-flow: column;
-}
-
-.components-container {
-  height: 100%;
-}
-
 mat-sidenav {
   width: 250px;
 }
@@ -58,7 +49,7 @@ a:active {
 .icon-credits {
   font-size: 10px;
   text-align: center;
-  margin-top: 10px;
+  padding: 5px;
 }
 
 .app-name {
