--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -2,10 +2,6 @@
   flex: 1 1 auto;
 }
 
-.recipe-name {
-  margin-left: 5px;
-}
-
 .search-container {
   padding: 6px;
 
@@ -35,5 +31,13 @@
 
   .recipe-card {
     margin-top: 0px;
+  }
+}
+
+.section-header {
+  display: flex;
+
+  mat-icon {
+    margin-right: 5px;
   }
 }
